	* Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	* Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

03-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed bugs in Bookmarks
			(directory expander, renaming and deleting files/directories)
		Fixed bug with empty path to chroot
		Fixed showing wrong tooltips in settings dialog
		Merged show_bars and show_bars_at_top in one combobox
			(I think that this is more suitable)
		Fixed bug in show/hide toolbar
		Removed option for change how deep directories will be scanned
			(I think that this is unusable and in some cases make geany to freezy)
		Removed option "ON_EXPAND_REFRESH" - This is unnessecary already

19-08-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Applied patch from Colomban Wendling
		to fix issue with creat() declaration
		THANKS

16-05-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed Bookmarks state when refreshing the tree

25-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added option to change bars position (Top or Bottom)

25-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Menu elements are inactive instands of hidden
		Added experimental bookmarks view
		Added option to show/hide tree lines
		Added option to copy the uri into clipboard
		Added option to search into the view by the name // thanks to native filebrowser
		Added tooltips with uri // thanks to native filebrowser
		Added option to open terminal
		Applied patch from Enrico to fix gtk+-2.8 compitable for tree lines
		Fixed "Go Up" not working if the current path ends with slash


19-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c